<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <data>
        <variable
            name="character"
            type="com.giroux.kevin.dofustuff.dto.Character" />
    </data>

    <android.support.design.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        tools:context="com.giroux.kevin.dofustuff.activity.character.CreateActivity">

        <android.support.design.widget.AppBarLayout
            android:id="@+id/app_bar"
            android:layout_width="match_parent"
            android:layout_height="@dimen/app_bar_height"
            android:fitsSystemWindows="true"
            android:theme="@style/AppTheme.AppBarOverlay">

            <android.support.design.widget.CollapsingToolbarLayout
                android:id="@+id/toolbar_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:contentScrim="?attr/colorPrimary"
                app:layout_scrollFlags="scroll|exitUntilCollapsed">

                <pl.droidsonroids.gif.GifImageView
                    android:id="@+id/createCharacterGif"
                    android:layout_width="match_parent"
                    app:layout_collapseMode="parallax"
                    android:layout_height="wrap_content" />

                <android.support.v7.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    app:layout_collapseMode="pin"
                    app:popupTheme="@style/AppTheme.PopupOverlay" />


            </android.support.design.widget.CollapsingToolbarLayout>
        </android.support.design.widget.AppBarLayout>

        <android.support.v4.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            tools:context="com.giroux.kevin.dofustuff.activity.character.CreateActivity"
            tools:showIn="@layout/activity_create">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:baselineAligned="false"
                    android:orientation="horizontal"
                    android:id="@+id/nameandgendersection"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <RelativeLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1">

                        <EditText
                            android:id="@+id/characterName"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="start"
                            android:layout_margin="@dimen/text_margin"
                            android:hint="@string/characterName"
                            android:inputType="text"
                            android:text="@={character.name}"
                            android:textAlignment="viewStart" />
                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1">
                        
                        <RadioGroup
                            android:id="@+id/radioGroupSex"
                            android:gravity="center"
                            android:layout_margin="@dimen/text_margin"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <ImageView
                                android:contentDescription="@string/femaleLogo"
                                android:layout_width="wrap_content"
                                android:layout_height="match_parent"
                                android:background="@drawable/gender_female"/>

                            <RadioButton
                                android:checked="true"
                                android:id="@+id/radioFemale"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content" />
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="match_parent"
                                android:textSize="25sp"
                                android:text="@string/divider"/>

                            <RadioButton
                                android:id="@+id/radioMale"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content" />

                            <ImageView
                                android:contentDescription="@string/maleLogo"
                                android:layout_width="wrap_content"
                                android:layout_height="match_parent"
                                android:background="@drawable/gender_male"/>

                        </RadioGroup>
                    </RelativeLayout>
                    
                </LinearLayout>
                
                


                <LinearLayout
                    android:id="@+id/levelSection"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/nameandgendersection"
                    android:baselineAligned="false">

                    <RelativeLayout

                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1">

                        <Spinner
                            android:id="@+id/classGame"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="@dimen/text_margin"
                            android:entries="@array/classGame" />


                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1">

                        <EditText
                            android:id="@+id/characterLevel"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="start"
                            android:layout_margin="@dimen/text_margin"
                            android:hint="@string/level"
                            android:inputType="number"
                            android:text="@={character.levelString}"
                            android:textAlignment="viewStart"
                            />

                    </RelativeLayout>

                </LinearLayout>

                <LinearLayout

                    android:id="@+id/nbCaracteristic"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/levelSection"
                    android:baselineAligned="false">

                    <RelativeLayout

                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="@dimen/text_margin"
                            android:text="@string/nbCaracteristicAvailable"
                            android:textAlignment="viewStart"
                            android:layout_gravity="start"/>


                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1">


                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="end"
                            android:layout_marginLeft="@dimen/text_margin"
                            android:layout_marginRight="@dimen/text_margin"
                            android:layout_marginTop="@dimen/text_margin"
                            android:text="@{character.nbCharacteristicPointAvailableStringOb}"
                            android:textAlignment="textEnd"
                            android:textColor="@color/colorPrimary" />


                    </RelativeLayout>

                </LinearLayout>

                <LinearLayout

                    android:id="@+id/caracteristicSection"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/nbCaracteristic"
                    android:baselineAligned="false">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="@dimen/text_margin"
                            android:text="@string/caracteristicTitle"
                            android:textAlignment="viewStart"
                            android:layout_gravity="start"/>

                </LinearLayout>

                <LinearLayout

                    android:id="@+id/caracteristicStrengthWisdomIntellect"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/nbCaracteristic"
                    android:baselineAligned="false">

                    <RelativeLayout

                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1">

                        <EditText
                            android:id="@+id/caracteristicForceValue"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="@dimen/text_margin"
                            android:hint="@string/strength"
                            android:text="@={character.pointForce}"
                            android:inputType="number"
                            android:textAlignment="viewStart"
                            android:layout_gravity="start"/>


                    </RelativeLayout>

                    <RelativeLayout

                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1">

                        <EditText
                            android:id="@+id/caracteristicSagesseValue"
                            android:layout_width="match_parent"
                            android:inputType="number"
                            android:layout_height="wrap_content"
                            android:layout_margin="@dimen/text_margin"
                            android:hint="@string/sagesse"
                            android:text="@={character.pointSagesse}"
                            android:textAlignment="viewStart"
                            android:layout_gravity="start"/>


                    </RelativeLayout>


                    <RelativeLayout

                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1">

                        <EditText
                            android:id="@+id/caracteristicIntelligenceValue"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="@dimen/text_margin"
                            android:inputType="number"
                            android:hint="@string/intelligence"
                            android:text="@={character.pointIntelligence}"
                            android:textAlignment="viewStart"
                            android:layout_gravity="start"/>


                    </RelativeLayout>

                </LinearLayout>

                <LinearLayout

                    android:id="@+id/caracteristicAgilityLuckVitality"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/caracteristicStrengthWisdomIntellect"
                    android:baselineAligned="false">

                    <RelativeLayout

                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1">

                        <EditText
                            android:id="@+id/caracteristicLuckValue"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="@dimen/text_margin"
                            android:hint="@string/luck"
                            android:text="@={character.pointChance}"
                            android:inputType="number"
                            android:textAlignment="viewStart"
                            android:layout_gravity="start"/>


                    </RelativeLayout>

                    <RelativeLayout

                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1">

                        <EditText
                            android:id="@+id/caracteristicAgilityValue"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="@dimen/text_margin"
                            android:hint="@string/agility"
                            android:text="@={character.pointAgility}"
                            android:inputType="number"
                            android:textAlignment="viewStart"
                            android:layout_gravity="start"/>


                    </RelativeLayout>


                    <RelativeLayout

                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1">

                        <EditText
                            android:inputType="number"
                            android:id="@+id/caracteristicVitalityValue"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="@dimen/text_margin"
                            android:hint="@string/vitality"
                            android:textAlignment="viewStart"
                            android:layout_gravity="start"/>


                    </RelativeLayout>

                </LinearLayout>



                <Button
                    android:text="@string/create"
                    android:id="@+id/createButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/caracteristicAgilityLuckVitality"
                    android:layout_margin="@dimen/text_margin" />
            </RelativeLayout>
        </android.support.v4.widget.NestedScrollView>

    </android.support.design.widget.CoordinatorLayout>
</layout>